WinFMP/WinFMPImport.h

typedef unsigned char uchar;
typedef unsigned long DWORD;
typedef unsigned char bool;
//----------------------------------------------------------------------------
//	全体ワーク
//----------------------------------------------------------------------------
typedef struct workstag
{
	FMPS	ExtBuff;				// 外部参照許可ワーク
	PARTS	_F[FMP_NumOfFMPart];	// ＦＭ音源ワーク
	PARTS	_A;						// ＡＤＰＣＭ音源ワーク
	PARTS	_X[FMP_NumOfExtPart];	// ＦＭextendワーク
	PARTS	_P[FMP_NumOfPPZ8Part];	// ＰＣＭ(ppz8)音源ワーク
	PARTS	_S[FMP_NumOfSSGPart];	// ＳＳＧ音源ワーク
	
	//------------------------------------------------------------------------
	//	リズム音源部ワーク
	//------------------------------------------------------------------------
	int		R_key[16];				// 絶対に変えられない
	int		R_mask;
	int		R_Oncho_cnt;
	int		R_Oncho_def;
	int		RTL_vol;
	int		R_vol[6];
	int		R_pan[6];
	int		R_Loop_now;
	int		R_Sync_flg;
	int		R_State_flg;			// イネーブルフラグ
	PARTS	_R;

	//------------------------------------------------------------------------
	//	ｂｙｔｅデータワーク
	//------------------------------------------------------------------------
	int		TotalLoop;				// ループ終了カウンタ
	int		Loop_cnt;				// ループ終了回数
	int		Int_fcT;				// 割り込みフェードカウンタ
	int		Int_fc;					// 割り込みフェードカウンタ
	int		TimerA_cnt;				// Ｔｉｍｅｒディレイ
	int		Ver;					// 曲データバージョン
	int		NowPPZmode;				// 現在のＰＰＺの再生モード
	int		MusicClockCnt;			// 曲のクロックカウント(C??)
	int		ClockCnt;				// クロックカウント
	int		PcmHardVol;				// ＰＣＭハード音量
	int		ExtendKeyon;			// extend状態の3chのkeyon
	int		ExtendAlg;				// extendチャンネルのアルゴリズム

	//------------------------------------------------------------------------
	//	ｗｏｒｄデータワーク
	//------------------------------------------------------------------------
	int		FM_effect_dat[4];		// 効果音モードずらし値
	int		Play_flg;				// 演奏中フラグ
	int		Loop_flg;				// ループフラグ
	int		Int_CX;					// 割り込みフェードカウンタ
	
	//------------------------------------------------------------------------
	//	チャンネル別ワークアドレステーブル
	//------------------------------------------------------------------------
	PARTS	*Chan_tbl_R;					// リズム
	PARTS	*Chan_tbl[FMP_NumOfFMPart+FMP_NumOfSSGPart+FMP_NumOfPPZ8Part+1+FMP_NumOfExtPart+1];

	//------------------------------------------------------------------------
	//	ＳＳＧエンベロープワーク
	//------------------------------------------------------------------------
	ENVS	EnvAddr[FMP_NumOfSSGPart];
	
	//------------------------------------------------------------------------
	//	演奏中の曲のファイル名
	//------------------------------------------------------------------------
	char	Music_name[_MAX_PATH];	// 演奏中の曲のファイル名

	//------------------------------------------------------------------------
	//	現在のＰＶＩファイル名
	//------------------------------------------------------------------------
	char	PVI_name[_MAX_PATH];	// 現在のＰＣＭファイル名
	
	//------------------------------------------------------------------------
	//	ＷＩＮＦＭＰ専用データ
	//------------------------------------------------------------------------
	int		rate;				//	PCM 出力周波数(11k, 22k, 44k, 55k)
	int		ppzrate;			//	PPZ 出力周波数
	bool	fmcalc55k;							// FM で 55kHz 合成をするか？
	bool	ppz8ip;								// PPZ8 で補完するか
	int		fadeout2_speed;						// fadeout(高音質)speed(>0で fadeout)
	int		lastSyncExtTime;					// 最後に Sync_Ext を実行した時間(ms/カラオケ用）
	char	pcmdir[FMP_MAX_PCMDIR+1][_MAX_PATH];	//	PCM 検索ディレクトリ
} WORKS;
__declspec(dllimport) int WINAPI fmp_getversion(void);
__declspec(dllimport) int WINAPI fmp_getinterfaceversion(void);
__declspec(dllimport) bool WINAPI fmp_init(char *path);
__declspec(dllimport) int WINAPI fmp_load(char *filename);
__declspec(dllimport) int WINAPI fmp_load2(uchar *musdata, int size);
__declspec(dllimport) void WINAPI fmp_start(void);
__declspec(dllimport) int WINAPI fmp_stop(void);
__declspec(dllimport) void WINAPI fmp_getpcmdata(short *buf, int nsamples);
__declspec(dllimport) int WINAPI fmp_maskon(bool rhythm_flag, int ah);
__declspec(dllimport) int WINAPI fmp_maskoff(bool rhythm_flag, int ah);
__declspec(dllimport) bool WINAPI fmp_loadrhythmsample(char *path);
__declspec(dllimport) bool WINAPI fmp_setpcmdir(char **path);
__declspec(dllimport) void WINAPI fmp_setpcmrate(int rate);
__declspec(dllimport) void WINAPI fmp_setppzrate(int rate);
__declspec(dllimport) void WINAPI fmp_fadeout(int speed);
__declspec(dllimport) void WINAPI fmp_fadeout2(int speed);
__declspec(dllimport) void WINAPI fmp_setfmcalc55k(bool flag);
__declspec(dllimport) void WINAPI fmp_setppzinterpolation(bool ip);
__declspec(dllimport) void WINAPI fmp_setadpcmppz8emulate(bool flag);
__declspec(dllimport) char * WINAPI fmp_getcomment(char *dest, uchar *musdata, int size);
__declspec(dllimport) char * WINAPI fmp_getcomment2(char *dest, uchar *musdata, int size);
__declspec(dllimport) char ** WINAPI fmp_getcomment3(char *dest[], uchar *musdata, int size);
__declspec(dllimport) int WINAPI fmp_fgetcomment(char *dest, char *filename);
__declspec(dllimport) int WINAPI fmp_fgetcomment2(char *dest, char *filename);
__declspec(dllimport) int WINAPI fmp_fgetcomment3(char *dest[], char *filename);
__declspec(dllimport) char * WINAPI fmp_getdefinedpcmfilename(char *dest, uchar *musdata, int size);
__declspec(dllimport) char * WINAPI fmp_getdefinedppzfilename(char *dest, uchar *musdata, int size, int bufnum);
__declspec(dllimport) int WINAPI fmp_fgetdefinedpcmfilename(char *dest, char *filename);
__declspec(dllimport) int WINAPI fmp_fgetdefinedppzfilename(char *dest, char *filename, int bufnum);
__declspec(dllimport) char * WINAPI fmp_getmusicfilename(char *dest);
__declspec(dllimport) char * WINAPI fmp_getpcmfilename(char *dest);
__declspec(dllimport) char * WINAPI fmp_getppzfilename(char *dest, int bufnum);
__declspec(dllimport) void WINAPI fmp_setfmvoldown(int voldown);
__declspec(dllimport) void WINAPI fmp_setssgvoldown(int voldown);
__declspec(dllimport) void WINAPI fmp_setrhythmvoldown(int voldown);
__declspec(dllimport) void WINAPI fmp_setadpcmvoldown(int voldown);
__declspec(dllimport) void WINAPI fmp_setppzvoldown(int voldown);
__declspec(dllimport) int WINAPI fmp_getfmvoldown(void);
__declspec(dllimport) int WINAPI fmp_getssgvoldown(void);
__declspec(dllimport) int WINAPI fmp_getrhythmvoldown(void);
__declspec(dllimport) int WINAPI fmp_getadpcmvoldown(void);
__declspec(dllimport) int WINAPI fmp_getppzvoldown(void);
__declspec(dllimport) void WINAPI fmp_setpos(int pos);
__declspec(dllimport) void WINAPI fmp_setpos2(int pos);
__declspec(dllimport) int WINAPI fmp_getpos(void);
__declspec(dllimport) int WINAPI fmp_getpos2(void);
__declspec(dllimport) bool WINAPI fmp_getlength(char *filename, int *length, int *loop);
__declspec(dllimport) bool WINAPI fmp_getlength2(char *filename, int *length, int *loop);
__declspec(dllimport) int WINAPI fmp_getloopcount(void);
__declspec(dllimport) void WINAPI fmp_setfmwait(int nsec);
__declspec(dllimport) void WINAPI fmp_setssgwait(int nsec);
__declspec(dllimport) void WINAPI fmp_setrhythmwait(int nsec);
__declspec(dllimport) void WINAPI fmp_setadpcmwait(int nsec);
__declspec(dllimport) int WINAPI fmp_getsyncscnt(void);
__declspec(dllimport) int WINAPI fmp_getlastsyncexttime(void);
__declspec(dllimport) WORKS * WINAPI fmp_getworks(void);
__declspec(dllimport) HRESULT WINAPI fmp_CoCreateInstance(
  REFCLSID rclsid,     //Class identifier (CLSID) of the object
  LPUNKNOWN pUnkOuter, //Pointer to whether object is or isn't part 
                       // of an aggregate
  DWORD dwClsContext,  //Context for running executable code
  REFIID riid,         //Reference to the identifier of the interface
  LPVOID * ppv         //Address of output variable that receives 
                       // the interface pointer requested in riid
);