WinFMP/WinFMP.pas


	//===========================================================================
	// IWINFMP : WINFMP の Interface Class
	//===========================================================================
	IWINFMP = interface(IFMPMD)
		['{B7910277-0295-4052-9A65-5AD48D0F3477}']
		function maskon(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
		function maskoff(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
		procedure setfmvoldown(voldown : Integer); stdcall;
		procedure setssgvoldown(voldown : Integer); stdcall;
		procedure setrhythmvoldown(voldown : Integer); stdcall;
		procedure setadpcmvoldown(voldown : Integer); stdcall;
		procedure setppzvoldown(voldown : Integer); stdcall;
		function getfmvoldown : Integer; stdcall;
		function getssgvoldown : Integer; stdcall;
		function getrhythmvoldown : Integer; stdcall;
		function getadpcmvoldown : Integer; stdcall;
		function getppzvoldown : Integer; stdcall;
		function getcomment(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
		function getcomment2(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
		function getcomment3(dest : TComment; musdata : Pointer; size : Integer) : PComment; stdcall;
		function fgetcomment(dest : PChar; filename : PChar) : Integer; stdcall;
		function fgetcomment2(dest : PChar; filename : PChar)  : Integer; stdcall;
		function fgetcomment3(dest : TComment; filename : PChar)  : Integer; stdcall;
		function getdefinedpcmfilename(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
		function getdefinedppzfilename(dest : PChar; musdata : Pointer; size : Integer; bufnum : Integer) : PChar; stdcall;
		function fgetdefinedpcmfilename(dest : PChar; filename : PChar) : Integer; stdcall;
		function fgetdefinedppzfilename(dest : PChar; filename : PChar; bufnum : Integer) : Integer; stdcall;
		function getsyncscnt : Integer; stdcall;
		function getlastsyncexttime : Integer; stdcall;
		function getworks : PWORKS; stdcall;
		procedure setadpcmppz8emulate(flag : Boolean); stdcall;
    function querypdzfz8xinterface(const riid: TIID; var ppv): HResult; stdcall;
	end;

{$ENDIF}


//=============================================================================
// Interface ID(IID) & Class ID(CLSID)
//=============================================================================
const
	// GUID of IWINFMP Interface ID
	IID_IWINFMP : TIID =
		(D1:$B7910277; D2:$0295; D3:$4052; D4:($9A,$65,$5A,$D4,$8D,$0F,$34,$77));

	// GUID of WINFMP Class ID
	CLSID_WINFMP : TCLSID =
		(D1:$3E7816B4; D2:$EB8F; D3:$435F; D4:($BC,$37,$01,$CE,$DB,$F4,$22,$87));



//=============================================================================
// DLL Interface
//=============================================================================
var
	HWinFMP : HMODULE;
{$IFDEF TESTCOMINTERFACE}
	pWinFMP  : IWINFMP;
	pWinFMP2 : IWINFMP;
{$ENDIF}
	
	fmp_getversion : function : Integer; stdcall;
	fmp_getinterfaceversion : function : Integer; stdcall;
	fmp_CoCreateInstance : function(const rclsid: TCLSID; pUnkOuter: IUnknown;
		dwClsContext: Longint; const riid: TIID; var ppv): HResult; stdcall;

{$IFDEF TESTCOMINTERFACE}
	function fmp_init(path : PChar) : Boolean; stdcall;
	function fmp_load(filename : PChar) : Integer; stdcall;
	function fmp_load2(musdata : Pointer; size : Integer) : Integer; stdcall;
	procedure fmp_start; stdcall;
	procedure fmp_stop; stdcall;
	procedure fmp_getpcmdata(buf : PSmallInt; nsamples : Integer); stdcall;
	function fmp_maskon(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
	function fmp_maskoff(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
	function fmp_loadrhythmsample(path : PChar) : Boolean; stdcall;
	function fmp_setpcmdir(pcmdir : PChar) : Boolean ; stdcall;
	procedure fmp_setpcmrate(rate : Integer); stdcall;
	procedure fmp_setppzrate(rate : Integer); stdcall;
	procedure fmp_fadeout(speed : Integer); stdcall;
	procedure fmp_fadeout2(speed : Integer); stdcall;
	procedure fmp_setfmcalc55k(flag : Boolean); stdcall;
	procedure fmp_setppzinterpolation(ip : Boolean); stdcall;
	procedure fmp_setadpcmppz8emulate(flag : Boolean); stdcall;
	function fmp_getcomment(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	function fmp_getcomment2(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	function fmp_getcomment3(dest : TComment; musdata : Pointer; size : Integer) : PComment; stdcall;
	function fmp_fgetcomment(dest : PChar; filename : PChar) : Integer; stdcall;
	function fmp_fgetcomment2(dest : PChar; filename : PChar) : Integer; stdcall;
	function fmp_fgetcomment3(dest : TComment; filename : PChar) : Integer; stdcall;
	function fmp_getdefinedpcmfilename(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	function fmp_getdefinedppzfilename(dest : PChar; musdata : Pointer; size : Integer; bufnum : Integer) : PChar; stdcall;
	function fmp_fgetdefinedpcmfilename(dest : PChar; filename : PChar) : Integer; stdcall;
	function fmp_fgetdefinedppzfilename(dest : PChar; filename : PChar; bufnum : Integer) : Integer; stdcall;
	function fmp_getmusicfilename(dest : PChar) : PChar; stdcall;
	function fmp_getpcmfilename(dest : PChar) : PChar; stdcall;
	function fmp_getppzfilename(dest : PChar; bufnum : Integer) : PChar; stdcall;
	procedure fmp_setfmvoldown(voldown : Integer); stdcall;
	procedure fmp_setssgvoldown(voldown : Integer); stdcall;
	procedure fmp_setrhythmvoldown(voldown : Integer); stdcall;
	procedure fmp_setadpcmvoldown(voldown : Integer); stdcall;
	procedure fmp_setppzvoldown(voldown : Integer); stdcall;
	function fmp_getfmvoldown : Integer; stdcall;
	function fmp_getssgvoldown : Integer; stdcall;
	function fmp_getrhythmvoldown : Integer; stdcall;
	function fmp_getadpcmvoldown : Integer; stdcall;
	function fmp_getppzvoldown : Integer; stdcall;
	procedure fmp_setpos(pos : Integer); stdcall;
	procedure fmp_setpos2(pos : Integer); stdcall;
	function fmp_getpos : Integer; stdcall;
	function fmp_getpos2 : Integer; stdcall;
	function fmp_getlength(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
	function fmp_getlength2(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
	function fmp_getloopcount : Integer; stdcall;
	procedure fmp_setfmwait(nsec : Integer); stdcall;
	procedure fmp_setssgwait(nsec : Integer); stdcall;
	procedure fmp_setrhythmwait(nsec : Integer); stdcall;
	procedure fmp_setadpcmwait(nsec : Integer); stdcall;
	function fmp_getsyncscnt : Integer; stdcall;
	function fmp_getlastsyncexttime : Integer; stdcall;
	function fmp_getworks : PWORKS; stdcall;
  function fmp_querypdzfz8xinterface(const riid: TIID; var ppv): HResult; stdcall;


{$ELSE}
	fmp_init : function(path : PChar) : Boolean; stdcall;
	fmp_load : function(filename : PChar) : Integer; stdcall;
	fmp_load2 : function(musdata : Pointer; size : Integer) : Integer; stdcall;
	fmp_start : procedure; stdcall;
	fmp_stop : procedure; stdcall;
	fmp_getpcmdata : procedure(buf : PSmallInt; nsamples : Integer); stdcall;
	fmp_maskon : function(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
	fmp_maskoff : function(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
	fmp_loadrhythmsample : function(path : PChar) : Boolean; stdcall;
	fmp_setpcmdir : function(pcmdir : PChar) : Boolean ; stdcall;
	fmp_setpcmrate : procedure(rate : Integer); stdcall;
	fmp_setppzrate : procedure(rate : Integer); stdcall;
	fmp_fadeout : procedure(speed : Integer); stdcall;
	fmp_fadeout2 : procedure(speed : Integer); stdcall;
	fmp_setfmcalc55k : procedure(flag : Boolean); stdcall;
	fmp_setppzinterpolation : procedure(ip : Boolean); stdcall;
	fmp_setadpcmppz8emulate : procedure(flag : Boolean); stdcall;
	fmp_getcomment : function(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	fmp_getcomment2 : function(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	fmp_getcomment3 : function(dest : TComment; musdata : Pointer; size : Integer) : PComment; stdcall;
	fmp_fgetcomment : function(dest : PChar; filename : PChar) : Integer; stdcall;
	fmp_fgetcomment2 : function(dest : PChar; filename : PChar) : Integer; stdcall;
	fmp_fgetcomment3 : function(dest : TComment; filename : PChar) : Integer; stdcall;
	fmp_getdefinedpcmfilename : function(dest : PChar; musdata : Pointer; size : Integer) : PChar; stdcall;
	fmp_getdefinedppzfilename : function(dest : PChar; musdata : Pointer; size : Integer; bufnum : Integer) : PChar; stdcall;
	fmp_fgetdefinedpcmfilename : function(dest : PChar; filename : PChar) : Integer; stdcall;
	fmp_fgetdefinedppzfilename : function(dest : PChar; filename : PChar; bufnum : Integer) : Integer; stdcall;
	fmp_getmusicfilename : function(dest : PChar) : PChar; stdcall;
	fmp_getpcmfilename : function(dest : PChar) : PChar; stdcall;
	fmp_getppzfilename : function(dest : PChar; bufnum : Integer) : PChar; stdcall;
	fmp_setfmvoldown : procedure(voldown : Integer); stdcall;
	fmp_setssgvoldown : procedure(voldown : Integer); stdcall;
	fmp_setrhythmvoldown : procedure(voldown : Integer); stdcall;
	fmp_setadpcmvoldown : procedure(voldown : Integer); stdcall;
	fmp_setppzvoldown : procedure(voldown : Integer); stdcall;
	fmp_getfmvoldown : function : Integer; stdcall;
	fmp_getssgvoldown : function : Integer; stdcall;
	fmp_getrhythmvoldown : function : Integer; stdcall;
	fmp_getadpcmvoldown : function : Integer; stdcall;
	fmp_getppzvoldown : function : Integer; stdcall;
	fmp_setpos : procedure(pos : Integer); stdcall;
	fmp_setpos2 : procedure(pos : Integer); stdcall;
	fmp_getpos : function : Integer; stdcall;
	fmp_getpos2 : function : Integer; stdcall;
	fmp_getlength : function(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
	fmp_getlength2 : function(filename : PChar; var length : Integer; var loop : Integer) : Boolean; stdcall;
	fmp_getloopcount : function : Integer; stdcall;
	fmp_setfmwait : procedure(nsec : Integer); stdcall;
	fmp_setssgwait : procedure(nsec : Integer); stdcall;
	fmp_setrhythmwait : procedure(nsec : Integer); stdcall;
	fmp_setadpcmwait : procedure(nsec : Integer); stdcall;
	fmp_getsyncscnt : function : Integer; stdcall;
	fmp_getlastsyncexttime : function : Integer; stdcall;
	fmp_getworks : function : PWORKS; stdcall;
  fmp_querypdzfz8xinterface : function(const riid: TIID; var ppv): HResult; stdcall;
{$ENDIF}


implementation

//----------------------------------------------------------------------------
// 関数アドレスが取得できないと強制終了
//----------------------------------------------------------------------------
function GetProcAddress2(hModule: HMODULE; lpProcName: LPCSTR): FARPROC; stdcall;
begin
	Result := GetProcAddress(hModule, lpProcName);
	if(result = nil) then begin
		ShowMessage(WINFMP_MSG_DLLBROKEN);
		Halt;
	end;
end;


{$IFDEF TESTCOMINTERFACE}
//----------------------------------------------------------------------------
// 関数を COM風インターフェイス呼び出しに変換するだけの関数群
//----------------------------------------------------------------------------
function fmp_init(path : PChar) : Boolean; stdcall;
begin
	pWINFMP2.init(path);
	Result := pWINFMP.init(path);

(*
	pWINFMP2.setfmwait(0);				// 曲長計算高速化のため
	pWINFMP2.setssgwait(0);				// 曲長計算高速化のため
	pWINFMP2.setrhythmwait(0);		// 曲長計算高速化のため
	pWINFMP2.setadpcmwait(0);			// 曲長計算高速化のため
*)
end;


function fmp_load(filename : PChar) : Integer; stdcall;
begin
	Result := pWINFMP.music_load(filename);
end;


function fmp_load2(musdata : Pointer; size : Integer) : Integer; stdcall;
begin
	Result := pWINFMP.music_load2(musdata, size);
end;


procedure fmp_start; stdcall;
begin
	pWINFMP.music_start;
end;


procedure fmp_stop; stdcall;
begin
	pWINFMP.music_stop;
end;


procedure fmp_getpcmdata(buf : PSmallInt; nsamples : Integer); stdcall;
begin
	pWINFMP.getpcmdata(buf, nsamples);
end;


function fmp_maskon(rhythm_flag : Boolean; ah : Integer) : Integer; stdcall;
begin
	Result := pWINFMP.maskon(rhythm_flag, ah);
end;

